--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -15,7 +15,7 @@
 
 
 <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-    Add Customer
+    Add Customer!
   </button>
   
   <!-- Modal -->
