--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -27,16 +27,12 @@
           <h4 class="modal-title" id="myModalLabel">Add Customer</h4>
         </div>
         <div class="modal-body">
-            <label>First Name:
-                <input placeholder="First Name">
-              </label>
-              <label>Last Name:
-                <input placeholder="Last Name">
-              </label>
+              <div>First Name:<input [(ngModel)]="newcust.firstname" type="text"></div>
+              <div>Last Name:<input [(ngModel)]="newcust.lastname" type="text"></div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary" (click)="addCustomer()">Save changes</button>
         </div>
       </div>
     </div>
